# Vibe-Indexing

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
scripts/: README.md
src/audio_description/: __init__.py  __main__.py
src/vibe_indexing/: __init__.py  __main__.py
tests/: test_cli.py
